<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:id="@+id/log_entry_layout"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  android:paddingBottom="@dimen/activity_vertical_margin"
			  android:paddingLeft="@dimen/activity_horizontal_margin"
			  android:paddingRight="@dimen/activity_horizontal_margin"
			  android:paddingTop="@dimen/activity_vertical_margin"
			  tools:context="com.brohkahn.loggerlibrary.LogViewEntry">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			style="@style/log_entry_header"
			android:text="@string/time"/>

		<TextView
			android:id="@+id/log_entry_time"
			style="@style/log_entry_item"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			style="@style/log_entry_header"
			android:text="@string/message"/>

		<TextView
			android:id="@+id/log_entry_message"
			style="@style/log_entry_item"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			style="@style/log_entry_header"
			android:text="@string/function"/>

		<TextView
			android:id="@+id/log_entry_function"
			style="@style/log_entry_item"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			style="@style/log_entry_header"
			android:text="@string/log_class"/>

		<TextView
			android:id="@+id/log_entry_class"
			style="@style/log_entry_item"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/log_entry_stack_trace_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone">

		<TextView
			style="@style/log_entry_header"
			android:text="@string/stack_trace"/>

		<TextView style="@style/log_entry_item"/>

	</LinearLayout>

	<TextView
		android:id="@+id/log_entry_stack_trace"
		style="@style/log_entry_item"/>

</LinearLayout>
